@@ -1,46 +1,54 @@
-package ru.andrey.kvstorage.jclient;
+package ru.andrey.kvstorage.jclient.connection;
 
 
 import io.netty.bootstrap.Bootstrap;
-import io.netty.channel.*;
+import io.netty.channel.Channel;
+import io.netty.channel.ChannelFuture;
+import io.netty.channel.ChannelInitializer;
+import io.netty.channel.ChannelOption;
+import io.netty.channel.EventLoopGroup;
 import io.netty.channel.nio.NioEventLoopGroup;
 import io.netty.channel.socket.SocketChannel;
 import io.netty.channel.socket.nio.NioSocketChannel;
 import io.netty.util.concurrent.Future;
 import io.netty.util.concurrent.GenericFutureListener;
 import ru.andrey.kvstorage.KvsClientInboundHandler;
-import ru.andrey.kvstorage.jclient.connection.KvsConnection;
 import ru.andrey.kvstorage.jclient.exception.KvsConnectionException;
 import ru.andrey.kvstorage.resp.ByteToRespCommandDecoder;
 import ru.andrey.kvstorage.resp.RespCommandToByteEncoder;
 import ru.andrey.kvstorage.resp.object.RespObject;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
-public class SessionsPool {
+public class ConnectionPool {
 
-    private final List<Session> sessions;
+    private final List<NettyKvsConnection> connections;
 
     private final Random random = new Random();
 
-    public SessionsPool() throws InterruptedException {
-        ClientBootstrap bootstrap = new ClientBootstrap();
-        sessions = List.of(bootstrap.initiateSession());
+    public ConnectionPool(ConnectionConfig config) {
+        NettyClientBootstrap bootstrap = new NettyClientBootstrap(config);
+
+        ArrayList<NettyKvsConnection> connections = new ArrayList<>();
+        for (int i = 0; i < config.getPoolSize(); i++) {
+            connections.add(bootstrap.initiateSession());
+        }
+        this.connections = Collections.unmodifiableList(connections);
     }
 
-    public Session getClientSession() {
-        return sessions.get(random.nextInt(100_000) % sessions.size());
+    public KvsConnection getClientConnection() {
+        return connections.get(random.nextInt(100_000) % connections.size());
     }
 
-    static class ClientBootstrap {
-        String host = "127.0.0.1"; // todo sukhoa
+    static class NettyClientBootstrap {
+        private final ConnectionConfig config;
 
-        int port = Integer.parseInt("8080");
+        private final EventLoopGroup workerGroup = new NioEventLoopGroup();
 
-        final EventLoopGroup workerGroup = new NioEventLoopGroup();
-
-        final Bootstrap bs = new Bootstrap()
+        private final Bootstrap bs = new Bootstrap()
                 .group(workerGroup)
                 .channel(NioSocketChannel.class)
                 .option(ChannelOption.SO_KEEPALIVE, true)
@@ -55,20 +63,29 @@ public class SessionsPool {
                     }
                 });
 
-        private Session initiateSession() throws InterruptedException {
+        public NettyClientBootstrap(ConnectionConfig config) {
+            this.config = config;
+        }
+
+        private NettyKvsConnection initiateSession() {
 //            try {
-            ChannelFuture f = bs.connect(host, port).sync();
-            return new Session(f.channel());
+            ChannelFuture f = null;
+            try {
+                f = bs.connect(config.getHost(), config.getPort()).sync();
+            } catch (InterruptedException e) {
+                throw new IllegalArgumentException("Exception while creating connection");
+            }
+            return new NettyKvsConnection(f.channel());
 //            } finally {
 //                workerGroup.shutdownGracefully();
 //            }
         }
     }
 
-    public static class Session implements KvsConnection {
+    public static class NettyKvsConnection implements KvsConnection {
         private final Channel channel;
 
-        public Session(Channel channel) {
+        public NettyKvsConnection(Channel channel) {
             this.channel = channel;
             channel.closeFuture().addListener(new GenericFutureListener() {
                 @Override
